--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .hero {
-  max-width: 1200px;
+  max-width: fit-content;
   margin: 0 auto;
   padding: 20px 60px;
   text-align: center;
@@ -65,7 +65,7 @@ h1 {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  margin: 40px 60px;
+  margin: 10px 0px;
   gap: 90px; /* Increased from 30px to 60px */
 }
 
@@ -92,9 +92,9 @@ h1 {
 
 .description {
   text-align: left;
-  max-width: 700px;
+  max-width: 800px;
   width: 100%;
-  padding: 20px;
+  padding: 60px;
   background: rgba(158, 121, 121, 0.7);
   border-radius: 12px;
   z-index: 10;
