--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ h1 {
   text-align: left;
   max-width: 800px;
   width: 100%;
-  padding: 60px;
+  padding: 28px;
   background: rgba(158, 121, 121, 0.7);
   border-radius: 12px;
   z-index: 10;
@@ -110,20 +110,31 @@ h1 {
   width: 380px;
   border-radius: 30px;
   float: right;
-  height: 430px;
+  height: 490px;
 }
 
 footer {
   margin-top: 40px;
   font-size: 14px;
   color: #7083cd;
+  position: absolute;
+  top: 1150px;
+  left: 550px;
 }
 
 #main-title {
   position: relative;
   top: 5px;
 }
-
+.extras{
+position: absolute;
+left: 350px;
+top: 850px;
+display: flex;
+justify-content: space-evenly;
+flex-wrap: wrap;
+align-items: flex-start;
+}
 .extras ol, .extras ul {
   text-align: left;
   margin-bottom: 20px;
