--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@ body {
 
 .state-icon {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 50px;
+  left: 50px;
   width: 140px;
   background: white;
   padding: 8px;
@@ -37,10 +37,10 @@ body {
 
 .socials {
   position: absolute;
-  top: 10px;
-  right: 20px;
+  top: 50px;
+  right: -180px;
   display: flex;
-  gap: 10px;
+  gap: 20px;
   z-index: 20;
 }
 
@@ -54,19 +54,20 @@ body {
 }
 
 h1 {
-  font-size: 42px;
+  font-size: 3rem;
   font-weight: bold;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   line-height: 1.3;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 30px;
+  margin-bottom: 80px;
 }
 
 .city-icons {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  margin: 10px 0px;
-  gap: 90px; /* Increased from 30px to 60px */
+  margin: 50px 0px;
+  gap: 100px;
 }
 
 .city-icons a:hover {
@@ -84,10 +85,11 @@ h1 {
 
 .content {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
   align-items: flex-start;
-  gap: 30px;
+  gap: 450px;
+  margin-bottom: 10px;
 }
 
 .description {
@@ -109,8 +111,9 @@ h1 {
 .flag {
   width: 380px;
   border-radius: 30px;
-  float: right;
   height: 490px;
+  position: absolute;
+  right: 300;
 }
 
 footer {
@@ -118,7 +121,7 @@ footer {
   font-size: 14px;
   color: #7083cd;
   position: absolute;
-  top: 1150px;
+  top: 1350px;
   left: 550px;
 }
 
@@ -127,9 +130,9 @@ footer {
   top: 5px;
 }
 .extras{
-position: absolute;
-left: 350px;
-top: 850px;
+position: relative;
+left: 0px;
+top: 20px;
 display: flex;
 justify-content: space-evenly;
 flex-wrap: wrap;
@@ -138,16 +141,20 @@ align-items: flex-start;
 .extras ol, .extras ul {
   text-align: left;
   margin-bottom: 20px;
+  font-size: 1.5rem;  
 }
 
 .extras table {
-  width: 100%;
+  width: 50%;
   border-collapse: collapse;
   margin: 20px 0;
+  position: absolute;
+  left: 0px;
+  top: 150px;
 }
 
 .extras th, .extras td {
-  border: 1px solid white;
+  border: 2px solid rgb(39, 36, 36);
   padding: 10px;
   text-align: left;
 }
