--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   background-size: cover;
   background-position: center;
   display: grid;
-  place-content: center;  
+  place-content: normal;  
 }
 
 .hero {
@@ -20,41 +20,25 @@ body {
 
 .top-bar {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+  position: relative;
+  top: 50px;
   margin-bottom: 20px;
 }
 
-.state-icon {
-  position: absolute;
-  top: 50px;
-  left: -180px;
-  width: 140px;
-  background: white;
-  padding: 8px;
-  border-radius: 10px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-  z-index: 5;
+.socials {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
-}
-
-.socials {
-  position: absolute;
-  top: 50px;
-  right: -180px;
-  display: flex;
   gap: 20px;
-  z-index: 20;
+  
 }
 
 .socials img {
   width: 48px;
   height: 48px;
-  background: white;
-  padding: 6px;
   border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 }
 
 h1 {
@@ -105,6 +89,7 @@ h1 {
   border-radius: 12px;
   z-index: 10;
   position: relative;
+  
 }
 
 .description li {
