--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ body {
   background-size: cover;
   background-position: center;
   display: grid;
-  place-content: normal;  
+  place-content: normal; 
+  display: flex; 
 }
 
 .hero {
@@ -20,25 +21,23 @@ body {
 
 .top-bar {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
   position: relative;
-  top: 50px;
   margin-bottom: 20px;
+  justify-content:flex-end;
 }
 
 .socials {
   position: relative;
   display: flex;
-  flex-wrap: wrap;
   gap: 20px;
   
 }
 
 .socials img {
-  width: 48px;
-  height: 48px;
+  width: 50px;
+  height: 50px;
   border-radius: 8px;
+  display: flex;
 }
 
 h1 {
