--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,14 @@ h1 {
   margin-right: 30px; 
 }
 
+.city-flag {
+  width: 400px;
+  height: auto;
+  max-height: 500px;
+  border-radius: 30px;
+  object-fit: cover;
+}
+
 footer {
   margin-top: 40px;
   font-size: 14px;
