--- a/styles.css
+++ b/styles.css
@@ -240,3 +240,10 @@ button[type="submit"]:hover {
 body.sources-page .description {
   margin: 0 auto;
 }
+
+body.sources-page .longhorn-img {
+  width: 600px;
+  height: 300px;
+  object-fit: cover;
+}
+
