--- a/styles.css
+++ b/styles.css
@@ -241,7 +241,7 @@ body.sources-page .description {
   margin: 0 auto;
 }
 
-body.sources-page .longhorn-img {
+body.sources-page .banner-img {
   width: 850px;
   height: 150px;
   object-fit: cover;
